fix: fix section alignment bug

--- a/styles/banner.module.css
+++ b/styles/banner.module.css
@@ -20,7 +20,7 @@
 }
 
 #bannerLogo {
-  margin: 65% 10%;
+  margin: 63% 10%;
   opacity: 1;
   /* width: 80%; */
 }
