--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,8 +15,17 @@ a {
   box-sizing: border-box;
 }
 
+/** PAGE LAYOUT **/
+#layout {
+  display: flex;
+}
+
 /** BANNER **/
 #banner-layout {
+  background-image: url('https://res.cloudinary.com/hellodewa/image/upload/v1624359775/paystaq-shopping-credit-preappform-frontend-demo/images/banner-bg_esiui4.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: inline-block;
   height: 100vh;
   width: 24.9vw;
